# ansari-agent

./: .env.example  .gitignore  CLAUDE.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  README_MODEL_COMPARISON.md  main.py  nixpacks.toml  pyproject.toml  railway-env-import.sh  railway.json  railway.toml
codev/plans/: 0002-langgraph-implementation.md  0004-model-comparison-ui.md
codev/protocols/spider-lite/: protocol.md
codev/reviews/: 0002-langgraph-implementation.md
codev/specs/: 0002-langgraph-implementation.md  0004-model-comparison-ui.md
examples/: interactive.py  simple_query.py
legacy/: README.md  test_search_quran.py
legacy/ansari_agent/: __init__.py
legacy/ansari_agent/cli/: __init__.py  compare.py
legacy/ansari_agent/core/: __init__.py
legacy/ansari_agent/tools/: search_quran.py
legacy/examples/: multi_user_simulation.py
legacy/tmp_useful/: complexity-comparison.md  streaming_implementation_summary.md  test_all_features.py  test_token_comparison.py
src/ansari_agent/core/: agent.py
src/ansari_gemini/: __init__.py  agent.py  graph.py  nodes.py  state.py  tools.py
src/ansari_langgraph/: __init__.py  agent.py  client_provider.py  graph.py  graph_provider.py  nodes.py  poc.py  state.py  tools.py
src/model_comparison/: __init__.py  app.py  auth.py  config.py  debug.html  endpoints.py  index.html  langgraph_adapter.py  models.py  session.py  streaming.py  streaming_adapter.py
tests/: test_agent.py  test_langgraph_integration.py
tests/model_comparison/: __init__.py  test_auth.py  test_models.py  test_session.py  test_streaming.py
(+7 files in other folders)
